--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -3,7 +3,7 @@
 {% block pageHeader %}
     <div class="page-header">
         <div class="container">
-            {% if template == 'studit'  %}
+            {% if template == 'studit' %}
                 <h2 class="color3">Bienvenue sur la plateforme de STUDIT</h2>
                 <ul class="breadcrumb">
                     <li class="color3">Bibliothèque de ressources pédagogiques</li>
@@ -20,27 +20,36 @@
 
 {% block main %}
     <div class="container mb-60 mt-20">
-        <div class="row">
+        <div class="row mt-20">
 
             {% if not app.user %}
                 {% block fos_user_content %}
                 {% endblock fos_user_content %}
             {% endif %}
 
-            <div class="col-sm-8
+            <div class="
                     {% if app.user %}
-                        col-sm-push-2
+                        col-md-5 col-lg-6 col-xl-8
                     {% else %}
-                        col-sm-pull-4
+                        col-md-8 col-md-pull-4
                     {% endif %}
-                mt-40">
-                {% if template == 'studit'  %}
+                ">
+                {% if template == 'studit' %}
                     <img src="{{ asset('educomp/images/logoSTUDIT.png') }}" alt="">
                 {% elseif template == 'afadec' %}
-                    <h4 class="heading pt-20 text-center">DÉCOUVREZ L’AFADEC <span class="color2">EN 2 MINUTES</span></h4>
-                    <iframe class="mt-20" width="100%" height="430" frameborder="0" allowfullscreen="" mozallowfullscreen="" webkitallowfullscreen="" src="https://player.vimeo.com/video/123835230"></iframe>
+                    <h4 class="heading pt-20 text-center mb-0">DÉCOUVREZ L’AFADEC <span
+                                class="color2">EN 2 MINUTES</span>
+                    </h4>
+                    <iframe class="" width="100%" height="430" frameborder="0" allowfullscreen=""
+                            mozallowfullscreen="" webkitallowfullscreen=""
+                            src="https://player.vimeo.com/video/123835230"></iframe>
                 {% endif %}
             </div>
+            {% if app.user %}
+                <div class="col-md-7 col-lg-6 col-xl-4">
+                    {% include "calendrier/calendrierWidget.html.twig" %}
+                </div>
+            {% endif %}
         </div>
         {% if template == "afadec" %}
             <div class="row mt-40">
@@ -56,40 +65,52 @@
 
                             <div class="col-sm-3">
                                 <figure class="effect-sadie">
-                                    <a target="_blank" href="http://www.e-educmaster.com/data_AFADEC/1er_degre/maths_remediation3_NDiaye_2013_capt/afadec_puissance.htm">
-                                        <img src="{{ asset('images/accueil/maths_lesPuissances.png') }}" class="img-responsive" alt="Mathématiques CRPE Remédiation">
+                                    <a target="_blank"
+                                       href="http://www.e-educmaster.com/data_AFADEC/1er_degre/maths_remediation3_NDiaye_2013_capt/afadec_puissance.htm">
+                                        <img src="{{ asset('images/accueil/maths_lesPuissances.png') }}"
+                                             class="img-responsive" alt="Mathématiques CRPE Remédiation">
                                         <figcaption>
-                                            <h6 class="img-title">Mathématiques CRPE Remédiation - <span class="color2">Les puissances</span></h6>
+                                            <h6 class="img-title">Mathématiques CRPE Remédiation - <span class="color2">Les puissances</span>
+                                            </h6>
                                         </figcaption>
                                     </a>
                                 </figure>
                             </div>
                             <div class="col-sm-3">
                                 <figure class="effect-sadie">
-                                    <a target="_blank" href="http://www.e-educmaster.com/data_AFADEC/1er_degre/Francais_Fiche_AccordParticipe_LeBellego_2013_op/co/Fiche1D_LeBellegoSansProdEleve_web.html">
-                                        <img src="{{ asset('images/accueil/fra_accord_partPass.png') }}" class="img-responsive" alt="Français CRPE Remédiation">
+                                    <a target="_blank"
+                                       href="http://www.e-educmaster.com/data_AFADEC/1er_degre/Francais_Fiche_AccordParticipe_LeBellego_2013_op/co/Fiche1D_LeBellegoSansProdEleve_web.html">
+                                        <img src="{{ asset('images/accueil/fra_accord_partPass.png') }}"
+                                             class="img-responsive" alt="Français CRPE Remédiation">
                                         <figcaption>
-                                            <h6 class="img-title">Français CRPE Remédiation - <span class="color2">L’accord du participe passé</span></h6>
+                                            <h6 class="img-title">Français CRPE Remédiation - <span class="color2">L’accord du participe passé</span>
+                                            </h6>
                                         </figcaption>
                                     </a>
                                 </figure>
                             </div>
                             <div class="col-sm-3">
                                 <figure class="effect-sadie">
-                                    <a target="_blank" href="http://www.e-educmaster.com/data_AFADEC/2d_degre/SVT_cor_biol_ESTIENNE_2013_wbm/index.html">
-                                        <img src="{{ asset('images/accueil/svt_corrBio.png') }}" class="img-responsive wp-post-image" alt="SVT CAFEP Corrigé">
+                                    <a target="_blank"
+                                       href="http://www.e-educmaster.com/data_AFADEC/2d_degre/SVT_cor_biol_ESTIENNE_2013_wbm/index.html">
+                                        <img src="{{ asset('images/accueil/svt_corrBio.png') }}"
+                                             class="img-responsive wp-post-image" alt="SVT CAFEP Corrigé">
                                         <figcaption>
-                                            <h6 class="img-title">SVT CAFEP Corrigé de sujet format concours en <span class="color2">biologie</span></h6>
+                                            <h6 class="img-title">SVT CAFEP Corrigé de sujet format concours en <span
+                                                        class="color2">biologie</span></h6>
                                         </figcaption>
                                     </a>
                                 </figure>
                             </div>
                             <div class="col-sm-3">
                                 <figure class="effect-sadie">
-                                    <a target="_blank" href="http://www.e-educmaster.com/data_AFADEC/2d_degre/anglais_fiche_VoixPassive_Webster_2013_op/co/Voix_Passive_web.html">
-                                        <img src="{{ asset('images/accueil/anglaisGrammVoixPassive.png') }}" class="img-responsive wp-post-image" alt="Anglais CAFEP Grammaire">
+                                    <a target="_blank"
+                                       href="http://www.e-educmaster.com/data_AFADEC/2d_degre/anglais_fiche_VoixPassive_Webster_2013_op/co/Voix_Passive_web.html">
+                                        <img src="{{ asset('images/accueil/anglaisGrammVoixPassive.png') }}"
+                                             class="img-responsive wp-post-image" alt="Anglais CAFEP Grammaire">
                                         <figcaption>
-                                            <h6 class="img-title">Anglais CAFEP Grammaire de traduction - <span class="color2">Voix passive</span></h6>
+                                            <h6 class="img-title">Anglais CAFEP Grammaire de traduction - <span
+                                                        class="color2">Voix passive</span></h6>
                                         </figcaption>
                                     </a>
                                 </figure>
@@ -102,4 +123,7 @@
             {% include 'pagesFixes/afadecContent.html.twig' %}
         {% endif %}
     </div>
+    {% if app.user %}
+        {% include "calendrier/calendrierPopup.html.twig" %}
+    {% endif %}
 {% endblock %}
