--- a/app/Resources/views/user/add.html.twig
+++ b/app/Resources/views/user/add.html.twig
@@ -100,11 +100,20 @@
             margin: 2px;
         }
         .dest{
-            width: 40px;
+            width: 100px;
             height: 40px;
-            border: 1px solid #000;
+            line-height: 40px;
+            text-align: center;
+            border: 3px dashed #000;
             background: #fff;
             border-radius: 3px;
+        }
+        .colorInList{
+            display: inline-block;
+            color: #fff;
+            background: #000;
+            padding: 5px 10px;
+            margin: 5px;
         }
         [data-color="etiq_bl"]{
             background-color: #168dd1;
@@ -203,6 +212,15 @@
                     ui.draggable.remove();
                 }
             });
+            let colArray = ['gris', 'noir', 'bleu', 'jaune', 'rouge', 'vert'];
+            shuffle(colArray);
+            for(let i=0; i<colArray.length; i++){
+                $('.colorsList').append('<div class="colorInList">'+parseInt(i+1)+' : '+colArray[i]+'</div>')
+            }
+
+            function shuffle(array) {
+                array.sort(() => Math.random() - 0.5);
+            }
         });
     </script>
 
@@ -276,18 +294,20 @@
                     <div class="formRow">
                         {{ form_label(form.matiereProfStag) }}{{ form_widget(form.matiereProfStag) }}
                     </div>
-                    <!--<div class="myCaptcha">
-                        <div>Afin de vérifier que vous n'êtes pas un robot, nous vous demandons de déplacer dans l'ordre les carrés</div>
-                        <div class="dest"></div>
+                    <div class="myCaptcha">
+                        <div>Afin de vérifier que vous n'êtes pas un robot, nous vous demandons de déplacer les carrés dans la cible, dans l'ordre suivant :</div>
+                        <div class="colorsList"></div>
+                        <div>Vous avez trois essais pour confirmer que vous n'êtes pas un robot.</div>
+                        <div class="dest">Cible</div>
                         <div class="start">
-                            <div class="etiq" data-color="etiq_r"></div>
-                            <div class="etiq" data-color="etiq_b"></div>
-                            <div class="etiq" data-color="etiq_j"></div>
-                            <div class="etiq" data-color="etiq_g"></div>
-                            <div class="etiq" data-color="etiq_bl"></div>
-                            <div class="etiq" data-color="etiq_gr"></div>
+                            <div class="etiq" data-color="etiq_r"><img src="{{ asset('images/captcha/r.png') }}" /></div>
+                            <div class="etiq" data-color="etiq_b"><img src="{{ asset('images/captcha/n.png') }}" /></div>
+                            <div class="etiq" data-color="etiq_j"><img src="{{ asset('images/captcha/j.png') }}" /></div>
+                            <div class="etiq" data-color="etiq_g"><img src="{{ asset('images/captcha/g.png') }}" /></div>
+                            <div class="etiq" data-color="etiq_bl"><img src="{{ asset('images/captcha/bl.png') }}" /></div>
+                            <div class="etiq" data-color="etiq_gr"><img src="{{ asset('images/captcha/gr.png') }}" /></div>
                         </div>
-                    </div>-->
+                    </div>
                     <div class="formRow center btnSubmitZone">
                         {{ form_widget(form.submit) }}
                     </div>
