--- a/app/Resources/views/messagerie.html.twig
+++ b/app/Resources/views/messagerie.html.twig
@@ -12,6 +12,11 @@
 {% endblock %}
 
 {% block main %}
+    <style>
+        .deleteMsg{
+            color: #fff !important;
+        }
+    </style>
     <script src="{{ asset('vendors/jquery-ui/jquery-ui.min.js') }}" type=text/javascript></script>
     <script src="{{ asset('vendors/ckeditor/ckeditor.js') }}"></script>
     <script src="{{ asset('vendors/ckeditor/adapters/jquery.js') }}"></script>
@@ -212,6 +217,11 @@
                 });
             });
 
+            let nbOptions = $('.selectFilterMsg option').length;
+            if(nbOptions == 1){
+                $('.openPopupSendMsg').remove();
+            }
+
             function gereAllSelected(){
                 $('.allSelected').unbind('click').click(function(){
                     setTimeout(function(){
@@ -245,7 +255,9 @@
         });
     </script>
     <div class="container pt-40 pb-40">
-        <a class="openPopupSendMsg btn btn-primary btn-sm"><i class="btnSendMsg fa fa-paper-plane-o" aria-hidden="true"></i></a>
+        {% if app.user.hasRole('ROLE_SUPER_ADMIN') or ((app.user.statut == 'Responsable' or app.user.statut == 'Formateur' or app.user.statut == 'Referent') and app.user.confirmedByAdmin) %}
+            <a class="openPopupSendMsg btn btn-primary btn-sm"><i class="btnSendMsg fa fa-paper-plane-o" aria-hidden="true"></i></a>
+        {% endif %}
         <h3 class="heading text-center">Messages reçus</h3>
         <div class="row">
             <div class="col-sm-12">
