évolution calendrier, Référent, droits particuliers

--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -2,7 +2,7 @@
  
 {% block fos_user_content %}
 
-    <div class="col-sm-4 col-sm-push-8">
+    <div class="col-md-4 col-md-push-8">
         <aside class="applynow-widget">
             <img src="{{ asset('educomp/images/applynow.png') }}" class="img-responsive center-block hidden-xs" alt="">
             <div class="apply-info">
