évolution calendrier, Référent, droits particuliers

--- a/app/Resources/views/cours/oneAdmin.html.twig
+++ b/app/Resources/views/cours/oneAdmin.html.twig
@@ -233,6 +233,7 @@
                 } else if ($(this).hasClass('addNewTypeChat')) {
                     typeItem = "chat";
                 }
+                console.log(typeItem);
 
                 $.ajax({
                     type: "POST",
