--- a/app/Resources/views/discipline/myCourses.html.twig
+++ b/app/Resources/views/discipline/myCourses.html.twig
@@ -5,7 +5,24 @@
 {% endblock %}
 
 {% block main %}
-
+    <style>
+        .createCourse{
+            text-align: center;
+        }
+        .formCreateCourse{
+            display: none;
+        }
+        .formCreateCourse input[type=file] {
+            display: inline-block;
+        }
+        .formCreateCourse label{
+            width: 200px;
+        }
+        .formCreateCourse form{
+            max-width: 600px;
+            margin: auto;
+        }
+    </style>
     <script>
         jQuery(document).ready(function () {
 
@@ -59,10 +76,15 @@
                     });
                 }
             });
+
+            $('.btnCreateCourse').click(function(){
+               $('.formCreateCourse').toggle();
+            });
         });
     </script>
 
     {% set hasResponsableMinRights = app.user.hasRole('ROLE_SUPER_ADMIN') or (app.user.statut == 'Responsable' and app.user.confirmedByAdmin) %}
+    {% set hasReferentMinRights = app.user.hasRole('ROLE_SUPER_ADMIN') or (app.user.statut == 'Referent' and app.user.confirmedByAdmin) %}
 
     <div class="container mt-120">
         <div class="row mt-20 mb-100">
@@ -71,6 +93,16 @@
                     <a href="{{ path('inscriptionDiscipline') }}">
                         Gérer mes inscriptions
                     </a>
+                </div>
+            {% endif %}
+            {% if hasReferentMinRights %}
+                <div class="course-list" style="margin-top: 0;">
+                    <div class="createCourse mt-20 mb-20 col-xs-12">
+                        <a href="#" class="btn btnCreateCourse btn-warning btn-sm">Créer un nouveau cours</a>
+                    </div>
+                    <div class="formCreateCourse">
+                        {{ form(form) }}
+                    </div>
                 </div>
             {% endif %}
             <div class="col-sm-12">
