évolution calendrier, Référent, droits particuliers

--- a/app/Resources/views/discipline/myCourses.html.twig
+++ b/app/Resources/views/discipline/myCourses.html.twig
@@ -22,6 +22,41 @@
             max-width: 600px;
             margin: auto;
         }
+        .colCoursContent{
+            display: inline-block;
+        }
+        @media screen and (max-width: 1600px){
+            .colCoursContent{
+                width: 800px;
+            }
+            .colDiscNames{
+                width: 300px;
+            }
+        }
+        @media screen and (max-width: 1200px){
+            .colCoursContent{
+                width: 700px;
+            }
+            .colDiscNames{
+                width: 240px;
+            }
+        }
+        @media screen and (max-width: 1000px){
+            .colCoursContent{
+                width: 560px;
+            }
+            .colDiscNames{
+                width: 180px;
+            }
+        }
+        @media screen and (max-width: 1000px){
+            .colCoursContent{
+                width: auto;
+            }
+            .colDiscNames{
+                width: auto;
+            }
+        }
     </style>
     <script>
         jQuery(document).ready(function () {
@@ -110,7 +145,7 @@
                 {% if active > 0 %}
                     {% set idActive = active %}
                 {% endif %}
-                <ul class="nav nav-pills nav-stacked pull-left col-md-4 col-sm-3" role="tablist"
+                <ul class="colDiscNames col-sm-4 nav nav-pills nav-stacked pull-left" role="tablist"
                     style="padding-bottom: 5px;padding-top: 5px">
                     {% for key,val in courses %}
                         <li role="presentation"
@@ -131,7 +166,7 @@
                              id="p1body{{ val.discipline.id }}" {% if loop.index == 1 %} style="padding-top: 0;" {% endif %}>
                             <div class="container mt-0 mb-60">
                                 <div class="row">
-                                    <div class="col-sm-7 col-md-8">
+                                    <div class="colCoursContent col-sm-8">
                                         {% if hasResponsableMinRights %}
                                             <div class="course-list" style="margin-top: 0;">
                                                 <div class="course-media text-center mt-10">
